Fix simplemde editor overflow issues when scrolling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,9 @@ html{
     overflow-y:hidden !important;
 }
 
+.CodeMirror{
+    position:initial !important;
+}
 
 
 
